Fix card data spacing

--- a/src/css/_box.scss
+++ b/src/css/_box.scss
@@ -52,7 +52,7 @@
 }
 
 .data-small {
-  font-size: 1vw;
-  // margin-bottom: 0.25vw;
+  font-size: 1.25vw;
+  margin: 0.5vw auto 0.5vw auto;
   color: rgb(57, 44, 28)
 }
